fixed large card on mobile

--- a/recipebook/style.css
+++ b/recipebook/style.css
@@ -122,10 +122,10 @@ button {
         /*margin: 0px 0px 15px;*/
     }
     .full-page {
-        left:10px;
-        top:10px;
-        width:calc(100% - 20px);
-        height:calc(100% - 20px);
+        left:0px;
+        top:0px;
+        width:calc(100%);
+        height:calc(100%);
     }
     .navbar {
         padding-left:0px;
